--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1119,6 +1119,7 @@ body,
 .widget.widget_related_post .single-post .post-content .posted-on {
   font-size: 12px;
   line-height: 1.2;
+  padding-top: 5px;
   margin-bottom: 5px;
   display: block;
 }
@@ -1785,11 +1786,13 @@ blockquote {
   margin-top: -8px;
 }
 
-.widget .widget-logo,
+
 .widget .widget-title {
   margin-bottom: 40px;
 }
-
+.widget .widget-logo{
+  margin-bottom: 25px;
+}
 .widget .widget-title * {
   font-weight: 500;
   text-transform: uppercase;
@@ -1830,8 +1833,9 @@ blockquote {
 }
 
 .widget.widget_newsletter .newsletter-content p {
-  margin-top: -8px;
+  margin-top: 0px;
   margin-bottom: 25PX;
+  padding-right: 10px;
 }
 
 .widget.widget_flicker ul {
@@ -3752,4 +3756,9 @@ html {
 
 #nav .current a {
   color: #ff7d37 !important;
+}
+
+/*---footer logo---*/
+.widget .widget-logo img {
+  width:150px
 }
